@@ -1,14 +1,25 @@
 package fr.traqueur.commands.updater;
 
+import org.bukkit.Bukkit;
+import org.bukkit.plugin.java.JavaPlugin;
+
 import java.io.IOException;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.Properties;
 import java.util.Scanner;
+import java.util.logging.Logger;
 
 public class Updater {
 
-    private static String getVersion() {
+    public static void checkUpdates() {
+        if(!Updater.isUpToDate()) {
+            Logger.getLogger("CommandsAPI").warning("The framework is not up to date, the latest version is " + Updater.fetchLatestVersion());
+        }
+    }
+
+    public static String getVersion() {
         Properties prop = new Properties();
         try {
             prop.load(Updater.class.getClassLoader().getResourceAsStream("version.properties"));
@@ -21,15 +32,26 @@ public class Updater {
     public static boolean isUpToDate() {
         try {
             String latestVersion = fetchLatestVersion();
-            return latestVersion.equals(getVersion());
+            return getVersion().equals(latestVersion);
         } catch (Exception e) {
-            e.printStackTrace();
             return false;
         }
     }
 
-    private static String fetchLatestVersion() throws IOException {
-        URL url = new URL("https://api.github.com/repos/Traqueur-dev/CommandsAPI/releases/latest");
+    public static String fetchLatestVersion() {
+        try {
+            URL url = URI.create("https://api.github.com/repos/Traqueur-dev/CommandsAPI/releases/latest").toURL();
+            String responseString = getString(url);
+            int tagNameIndex = responseString.indexOf("\"tag_name\"");
+            int start = responseString.indexOf('\"', tagNameIndex + 10) + 1;
+            int end = responseString.indexOf('\"', start);
+            return responseString.substring(start, end);
+        } catch (Exception e) {
+            return null;
+        }
+    }
+
+    private static String getString(URL url) throws IOException {
         HttpURLConnection connection = (HttpURLConnection) url.openConnection();
         connection.setRequestMethod("GET");
 
@@ -42,10 +64,6 @@ public class Updater {
             connection.disconnect();
         }
 
-        String responseString = response.toString();
-        int tagNameIndex = responseString.indexOf("\"tag_name\"");
-        int start = responseString.indexOf('\"', tagNameIndex + 10) + 1;
-        int end = responseString.indexOf('\"', start);
-        return responseString.substring(start, end);
+        return response.toString();
     }
 }
